// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Center widget renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Text>
    Center
  </Text>
</View>
`;

exports[`Center widget renders correctly when no children 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
/>
`;
